--- a/toyota-web/src/fonts/hataListesi.css
+++ b/toyota-web/src/fonts/hataListesi.css
@@ -21,7 +21,6 @@
     background-color: #B9F3FC;
 }
 .button{
-  border-radius: 10px;
-  margin: 10px;
-  padding: 10px;
+  border-radius: 15px;
+  text-align: center;
 }
