HATA Data listesine hover efekti eklendi birkac css duzeltmesi

--- a/toyota-web/src/fonts/hataListesi.css
+++ b/toyota-web/src/fonts/hataListesi.css
@@ -17,9 +17,10 @@
   background-color: white;
   font-family: "Toyota Base", arial, helvetica, sans-serif;
 }
-.color{
+.header-color{
     background-color: #B9F3FC;
 }
+
 .button{
   border-radius: 15px;
   text-align: center;
