hata giris koordinatlar dinamik bir sekilde alinabiliyor

--- a/toyota-web/src/components/form/form.css
+++ b/toyota-web/src/components/form/form.css
@@ -12,3 +12,9 @@
     margin-bottom: 0;
     margin-left: 14px;
 }
+/* /* .selects{
+    position: relative;
+    left: 30px;
+    float: right;
+    overflow:visible!important;
+/* }  */
