--- a/toyota-web/src/fonts/carMapper.css
+++ b/toyota-web/src/fonts/carMapper.css
@@ -5,12 +5,12 @@
 	background: rgba(239, 236, 236, 0.8);
 	transform: translate3d(-50%, -50%, 0);
 	border-radius: 5px;
-	pointer-events: none;
 	z-index: 10;
 	font-size: 10px;
 	overflow-wrap: break-word;
 	width: 78px;
     height: 50px;
+	text-align: center;
 }
 
 a {
